--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "nytimes_react",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "cd client && npm run build",
     "react-dev": "cd client && npm start",
-    "develop": "concurrently --kill-others \"npm run react-dev\" \"nodemon server.js\""
+    "develop": "concurrently --kill-others \"npm run react-dev\" \"nodemon server.js\"",
+    "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
+    "build": "cd client && npm run build",
+    "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
