--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "react-dev": "cd client && npm start",
     "develop": "concurrently --kill-others \"npm run react-dev\" \"nodemon server.js\"",
-    "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
+    "start": "node server.js",
     "build": "cd client && npm run build",
     "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
     "test": "echo \"Error: no test specified\" && exit 1"
