--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-error-overlay": "4.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
@@ -13,6 +14,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "devDependencies": {
+    "@storybook/react": "^3.4.0",
+    "@storybook/addon-actions": "^3.4.0",
+    "@storybook/addon-links": "^3.4.0",
+    "@storybook/addons": "^3.4.0",
+    "babel-core": "^6.26.0",
+    "babel-runtime": "^6.26.0"
   }
 }
