--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "merge": "^1.2.1",
     "mongoose": "^5.0.12"
   },
   "devDependencies": {
